--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=mgdarwin_202214_BaseProject
 sonar.organization=mgdarwin
 
+sonar.sources=src
+sonar.test=src
 sonar.test.inclusions=**/*.spec.ts
 
 # This is the name and version displayed in the SonarCloud UI.
