--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,9 @@ sonar.organization=mgdarwin
 
 sonar.sources=src
 sonar.test=src
-sonar.test.inclusions=**/*.spec.ts
+#sonar.test.inclusions=**/*.spec.ts
+sonar.test.inclusions=src/app.controller.spec.ts
+
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=202214_BaseProject
