--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.test=src
 #sonar.test.inclusions=**/*.spec.ts
 sonar.test.inclusions=src/app.controller.spec.ts
 
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=202214_BaseProject
