--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.organization=mgdarwin
 
 sonar.sources=src
 sonar.test=src
-#sonar.test.inclusions=**/*.spec.ts
-sonar.test.inclusions=src/app.controller.spec.ts
+sonar.test.inclusions=**/*.spec.ts
+#sonar.test.inclusions=src/app.controller.spec.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
