--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,8 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=202214_BaseProject
-#sonar.projectVersion=1.0
+sonar.projectName=202214_BaseProject
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
