--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,16 +4,15 @@ sonar.organization=mgdarwin
 sonar.sources=src
 sonar.test=src
 sonar.test.inclusions=**/*.spec.ts
-#sonar.test.inclusions=src/app.controller.spec.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=202214_BaseProject
-sonar.projectVersion=1.0
+#sonar.projectName=202214_BaseProject
+#sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
