--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.organization=mgdarwin
 
 sonar.sources=src
 sonar.test=src
+sonar.test.exclusions=**/*.dto.ts/**,**/*.entity.ts/**,**/*.module.ts/**
 sonar.test.inclusions=**/*.spec.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
