--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,9 @@ sonar.organization=mgdarwin
 sonar.sources=src
 sonar.test=src
 sonar.test.exclusions=**/*.dto.ts/**,**/*.entity.ts/**,**/*.module.ts/**
+sonar.coverage.exclusions=**/*.dto.ts/**,**/*.entity.ts/**,**/*.module.ts/**
 sonar.test.inclusions=**/*.spec.ts
+
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
