--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.organization=mgdarwin
 
 sonar.sources=src
 sonar.test=src
-sonar.test.exclusions=**/*.dto.ts/**,**/*.entity.ts/**,**/*.module.ts/**
-sonar.coverage.exclusions=**/*.dto.ts/**,**/*.entity.ts/**,**/*.module.ts/**
+sonar.test.exclusions=**/**/*.dto.ts,**/**/*.entity.ts,**/**/*.module.ts
+sonar.coverage.exclusions=**/**/*.dto.ts,**/**/*.entity.ts,**/**/*.module.ts
 sonar.test.inclusions=**/*.spec.ts
 
 
