--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.sources=src
 sonar.test=src
 sonar.test.exclusions=**/**/*.dto.ts,**/**/*.entity.ts,**/**/*.module.ts,**/**/*.controller.ts,**/*.ts
 sonar.coverage.exclusions=**/**/*.dto.ts,**/**/*.entity.ts,**/**/*.module.ts,**/**/*.controller.ts,**/*.ts
-sonar.test.inclusions=**/*.spec.ts
+sonar.test.inclusions=**/**/*.spec.ts
 
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
